gnome-shell segfault in remove_class_name
Affected version
wayland fedora 39 (latest updates). it seems to occur a lot more frequently when I enable a bunch of extensions.
Bug summary
gnome-shell crashes with kernel: gnome-shell[8645]: segfault at 5633146a9000 ip 00007fac5c1ea8b5 sp 00007ffe57145b10 error 4 in libst-13.so
here is a sample stack trace.
#0 0x00007f69fad708b5 in find_class_name
(class_list=class_list@entry=0x56389b5b5db0 "app-folder-dialog\fϓ8V\t+\031\t+\031\f\031AS Sertifitseerimiskeskus1(0&\006\003U\004\003\f\037EE Certification Centre Root CA1\0300\026\006\t*\206H\206\367\r\001\t\001\026\tpki@sk.ee0\"\030\01720101030101030Z\030\01720301217235959Z0u1\v0\t\006\003U\004\006\023\002EE1\"0 \006\003U\004\f\031AS Sertifitseeri"..., class_name=class_name@entry=0x5638938db7c0 "") at ../src/st/st-widget.c:1078
#1 0x00007f69fad709e0 in remove_class_name (class_list=0x563893ce42d0, class_name=class_name@entry=0x5638938db7c0 "") at ../src/st/st-widget.c:1138
#2 0x00007f69fad77bc0 in st_widget_remove_style_class_name (style_class=0x5638938db7c0 "", actor=0x563893ce4740 [StBoxLayout]) at ../src/st/st-widget.c:1231
#3 st_widget_remove_style_class_name (actor=0x563893ce4740 [StBoxLayout], style_class=0x5638938db7c0 "") at ../src/st/st-widget.c:1221
#4 0x00007f69f9f96056 in ffi_call_unix64 () at ../src/x86/unix64.S:104
#5 0x00007f69f9f925ef in ffi_call_int (cif=cif@entry=0x56389095e770, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>, closure=closure@entry=0x0)
at ../src/x86/ffi64.c:673
#6 0x00007f69f9f953fe in ffi_call (cif=0x56389095e770, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>) at ../src/x86/ffi64.c:710
#7 0x00007f69faf6a80f in Gjs::Function::invoke(JSContext*, JS::CallArgs const&, JS::Handle<JSObject*>, _GIArgument*)
(this=0x56389095e750, context=context@entry=0x56388f0479a0, args=..., this_obj=..., r_value=r_value@entry=0x0) at ../gi/function.cpp:1058
#8 0x00007f69faf750b4 in Gjs::Function::call(JSContext*, unsigned int, JS::Value*) (context=0x56388f0479a0, js_argc=<optimized out>, vp=<optimized out>) at ../gi/function.cpp:1236
this has been happening multiple times since I've upgrade to fedora 39 (not yet released). I'm also working on gnome-extensions so I figured it could be my fault, but I've tried running without my extensions (but some others) it still recurs, but less often.
Steps to reproduce
unfortunately, there is no triggering event, sometimes it happens when I'm using the desktop, sometimes it happens when the system is unused.
What happened
crash
What did you expect to happen
not crash.
Relevant logs, screenshots, screencasts etc.
Edited by kenneth topp